--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   }, 
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }  
+  },
+  "TokenKey": "my-super-strong-unguessable-key-for-dev-environment"
 }
