--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "YourCloudinaryName in cloudinary.com",
+    "ApiKey": "YourApiKey",
+    "ApiSecret": "YourApiSecret"
+  }
 }
